--- a/auto_nav/stm32f4-boat/CMakeLists.txt
+++ b/auto_nav/stm32f4-boat/CMakeLists.txt
@@ -35,94 +35,54 @@ set(CMAKE_CXX_EXTENSIONS ON)
 
 ###############################################################################
 
-# set(RTOS_ENABLE 1)
-
 ###############################################################################
 # Headers 
-
-# if (RTOS_ENABLE EQUAL 1)
 
 # STM generated code 
 set(STM32CUBEMX_INCLUDE_DIRECTORIES
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/FATFS/Target
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/FATFS/App
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/include
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F
+    # ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2
+    # ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/include
+    # ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/CMSIS/Device/ST/STM32F4xx/Include
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/CMSIS/Include
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Inc
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy)
 
-# STM32F4 library code 
-set(STM32F4_INCLUDE_DIRECTORIES 
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers/boat
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers/boat/modules
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers/config_files
+# STM32F4 project code 
+set(STM32F4_PROJECT_INCLUDE_DIRECTORIES 
     ${CMAKE_CURRENT_SOURCE_DIR}/headers/config_files/devices
     ${CMAKE_CURRENT_SOURCE_DIR}/headers/config_files/system
     ${CMAKE_CURRENT_SOURCE_DIR}/headers/core
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers/ground_station
     ${CMAKE_CURRENT_SOURCE_DIR}/headers/includes
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers/modules
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers/system_data
-    # ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/vehicle
-    # ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/system
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/core
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/devices
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/peripherals
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/tools)
 
-set(PROJECT_INCLUDE_DIRECTORIES
-    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/vehicle
-    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/system)
-
-# else()
-
-# # STM 
-# set(STM32CUBEMX_INCLUDE_DIRECTORIES
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/FATFS/Target
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/FATFS/App
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/include
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/CMSIS/Device/ST/STM32F4xx/Include
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/CMSIS/Include
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Inc
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy)
-
-# # Library 
-# set(STM32F4_INCLUDE_DIRECTORIES 
-#     ${CMAKE_CURRENT_SOURCE_DIR}/headers
-#     ${CMAKE_CURRENT_SOURCE_DIR}/headers/config_files
-#     ${CMAKE_CURRENT_SOURCE_DIR}/headers/config_files/devices
-#     ${CMAKE_CURRENT_SOURCE_DIR}/headers/config_files/system
-#     ${CMAKE_CURRENT_SOURCE_DIR}/headers/core
-#     ${CMAKE_CURRENT_SOURCE_DIR}/headers/ground_station
-#     ${CMAKE_CURRENT_SOURCE_DIR}/headers/includes
-#     ${CMAKE_CURRENT_SOURCE_DIR}/headers/modules
-#     ${CMAKE_CURRENT_SOURCE_DIR}/headers/system_data
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/core
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/devices
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/peripherals
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/tools)
-
-# endif()
+# Autopilot project code 
+set(AUTOPILOT_PROJECT_INCLUDE_DIRECTORIES
+    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/boat
+    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/system
+    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/vehicle)
 
 # External library code 
 set(LIBRARY_INCLUDE_DIRECTORIES 
+    # MAVLink 
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../mavlink/c_library_v2
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../mavlink/c_library_v2/common)
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../mavlink/c_library_v2/common
+    # CMSIS 
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS_6/CMSIS/RTOS2/Include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/CMSIS/RTOS2/FreeRTOS/Include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/Source/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/Source/portable/GCC/ARM_CM4F)
 
 ###############################################################################
 
 ###############################################################################
 # Sources 
-
-# if (RTOS_ENABLE EQUAL 1)
 
 # STM generated code 
 file(GLOB_RECURSE STM32CUBEMX_SOURCES CONFIGURE_DEPENDS
@@ -133,10 +93,10 @@ file(GLOB_RECURSE STM32CUBEMX_SOURCES CONFIGURE_DEPENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src/ff_gen_drv.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src/option/syscall.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src/option/ccsbcs.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/*.c
+    # ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/*.c
+    # ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/*.c
+    # ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/*.c
+    # ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/*.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
@@ -153,16 +113,9 @@ file(GLOB_RECURSE STM32CUBEMX_SOURCES CONFIGURE_DEPENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c)
 
-# STM32F4 library code 
-file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/boat/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/boat/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/boat/modules/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/boat/modules/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/boat/threads/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/boat/threads/*.cpp
+# STM32F4 project code 
+file(GLOB_RECURSE STM32F4_PROJECT_SOURCES CONFIGURE_DEPENDS
+    ${CMAKE_CURRENT_SOURCE_DIR}/sources/hardware.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/*.c
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/devices/*.c
@@ -171,12 +124,6 @@ file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/system/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/core/*.c
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/core/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/ground_station/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/ground_station/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/modules/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/modules/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/system_data/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/system_data/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/devices/*.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/devices/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/peripherals/*.c
@@ -184,64 +131,34 @@ file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/tools/*.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/tools/*.cpp)
 
-# else()
+# Autopilot project code 
+file(GLOB_RECURSE AUTOPILOT_PROJECT_SOURCES CONFIGURE_DEPENDS
+    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/boat/*.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/boat/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/system/*.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/system/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/vehicle/*.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../autopilot/vehicle/*.cpp)
 
-# # STM 
-# file(GLOB_RECURSE STM32CUBEMX_SOURCES CONFIGURE_DEPENDS
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/FATFS/Target/user_diskio.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/FATFS/App/fatfs.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src/diskio.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src/ff.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src/ff_gen_drv.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src/option/syscall.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Middlewares/Third_Party/FatFs/src/option/ccsbcs.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/stmcode/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c)
-
-# # Library 
-# file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/*.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/devices/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/devices/*.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/system/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/system/*.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/core/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/core/*.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/ground_station/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/ground_station/*.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/modules/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/modules/*.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/system_data/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/sources/system_data/*.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/devices/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/devices/*.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/peripherals/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/peripherals/*.cpp
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/tools/*.c
-#     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/tools/*.cpp)
-
-# endif()
+# External library code 
+file(GLOB_RECURSE LIBRARY_PROJECT_SOURCES CONFIGURE_DEPENDS
+    # CMSIS 
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/CMSIS/RTOS2/FreeRTOS/Source/cmsis_os2.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/Source/list.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/Source/queue.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/Source/tasks.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/Source/timers.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/Source/portable/MemMang/heap_4.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMSIS-FreeRTOS/Source/portable/GCC/ARM_CM4F/*.c)
 
 ###############################################################################
 
 # Executable files 
 add_executable(${EXECUTABLE}
     ${STM32CUBEMX_SOURCES} 
-    ${PROJECT_SOURCES}
+    ${STM32F4_PROJECT_SOURCES}
+    ${AUTOPILOT_PROJECT_SOURCES}
+    ${LIBRARY_PROJECT_SOURCES}
     ${STARTUP_SCRIPT})
 
 # Embedded macros (defines) 
@@ -254,9 +171,9 @@ target_compile_definitions(${EXECUTABLE} PRIVATE
 target_include_directories(${EXECUTABLE} SYSTEM PRIVATE
     ${STM32CUBEMX_INCLUDE_DIRECTORIES})
 target_include_directories(${EXECUTABLE} PRIVATE
-    ${STM32F4_INCLUDE_DIRECTORIES})
+    ${STM32F4_PROJECT_INCLUDE_DIRECTORIES})
 target_include_directories(${EXECUTABLE} PRIVATE
-    ${PROJECT_INCLUDE_DIRECTORIES})
+    ${AUTOPILOT_PROJECT_INCLUDE_DIRECTORIES})
 target_include_directories(${EXECUTABLE} PRIVATE
     ${LIBRARY_INCLUDE_DIRECTORIES})
 
