Updated comments and formatting.

--- a/TerraPilot/stm32f4-boat/CMakeLists.txt
+++ b/TerraPilot/stm32f4-boat/CMakeLists.txt
@@ -51,9 +51,8 @@ set(STM32CUBEMX_INCLUDE_DIRECTORIES
 # STM32F4 project code 
 set(STM32F4_PROJECT_INCLUDE_DIRECTORIES 
     ${CMAKE_CURRENT_SOURCE_DIR}/hardware
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers/config_files/system
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers/core
-    ${CMAKE_CURRENT_SOURCE_DIR}/headers/includes
+    ${CMAKE_CURRENT_SOURCE_DIR}/core
+    ${CMAKE_CURRENT_SOURCE_DIR}/includes
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/core
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/devices
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/headers/peripherals
@@ -108,12 +107,10 @@ file(GLOB_RECURSE STM32CUBEMX_SOURCES CONFIGURE_DEPENDS
 
 # STM32F4 project code 
 file(GLOB_RECURSE STM32F4_PROJECT_SOURCES CONFIGURE_DEPENDS
-    ${CMAKE_CURRENT_SOURCE_DIR}/hardware/hardware.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/hardware/device_config.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/system/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/config_files/system/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/core/*.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/core/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/hardware/*.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/hardware/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/*.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/devices/*.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/devices/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../STM32F4-driver-library/sources/peripherals/*.c
