--- a/.gitignore
+++ b/.gitignore
@@ -18,20 +18,20 @@ __pycache__/
 
 
 #==================================================
-# Configuration 
-
-# System configuration 
-TerraPilot/autopilot/system/system_config.h 
-TerraPilot/stm32f4-boat/headers/core/hardware_config.h
-
-#==================================================
-
-
-#==================================================
 # TerraPilot 
+#==================================================
+
+
+#==================================================
+# stm32f4-boat
 
 # Application files 
-TerraPilot/stm32f4-boat/sources/system_data/gps_coordinates.cpp 
+TerraPilot/stm32f4-boat/superseded/sources/system_data/gps_coordinates.cpp 
+
+# System configuration 
+# TerraPilot/autopilot/system/system_config.h 
+TerraPilot/stm32f4-boat/hardware/system_config.h
+TerraPilot/stm32f4-boat/hardware/hardware_config.h
 
 #==================================================
 
